@@ -45,16 +45,16 @@ closed_dbm(void)
     rb_raise(rb_eDBMError, "closed DBM file");
 }
 
-#define GetDBM(obj, dbmp) {\
+#define GetDBM(obj, dbmp) do {\
     Data_Get_Struct((obj), struct dbmdata, (dbmp));\
     if ((dbmp) == 0) closed_dbm();\
     if ((dbmp)->di_dbm == 0) closed_dbm();\
-}
+} while (0)
 
-#define GetDBM2(obj, data, dbm) {\
+#define GetDBM2(obj, data, dbm) do {\
     GetDBM((obj), (data));\
     (dbm) = dbmp->di_dbm;\
-}
+} while (0)
 
 static void
 free_dbm(struct dbmdata *dbmp)
